# train_grpo.py

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: deepspeed_zero2.json  deepspeed_zero3.json  default.yaml  gsm8k_7b.yaml  gspo_vision.yaml  math_dataset.yaml
notebooks/: grpo_training_super.ipynb
scripts/: evaluate.sh  train.sh  train_deepspeed.sh
src/grpo_trainer/: __init__.py  cli.py  config.py  datasets.py  evaluate.py  model.py  rewards.py  trainer.py
tests/: __init__.py  test_config.py  test_datasets.py  test_rewards.py
